nginxpod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: multi-container-pod
  namespace: default
  labels:
    aj: singh
spec:
  containers:
  - image: nginx:latest
    name: bold
    ports:
    - containerPort: 80
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: html-volume
  volumes:
  - name: html-volume
    emptyDir:
      sizeLimit: 500Mi
