np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-ingress
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: aj
      operator: In
      values:
      - singh
  ingress:
  - ports:
    - port: 80
